update: add the createdAfter parameter to the endpoint for getting a list of user tasks
