# api-docs.json
@@ -136,6 +136,16 @@
                         "schema": {
                             "type": "string"
                         }
+                    },
+                    {
+                        "name": "createdAfter",
+                        "in": "query",
+                        "description": "Restrict to tasks that were created after the given date",
+                        "schema": {
+                            "type": "string",
+                            "format": "date-time"
+                        },
+                        "example": "2017-07-21T17:32:28Z"
                     }
                 ],
                 "responses": {
